[project]
name = "op_downloader"
version = "0.1.0"
description = "Download One Piece Manga Chapters from TCB Scans"
readme = "README.md"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "Guillem Orellana Trullols", email = "guillem.orellana@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9,<4.0"
dependencies = [
  "httpx==0.28.1",
  "beautifulsoup4",
  "toml",
  "Pillow",
  "typer",
  "aiocache",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pre-commit"]
lambda = ["python-telegram-bot", "aws-lambda-typing", "typing-extensions"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "aiocache.*,aws_lambda_typing.*,telegram.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 80

[tool.ruff.lint]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  "F401",
]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["ticker_info"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
